fix msg spacing

--- a/public/css/homePageStyles.css
+++ b/public/css/homePageStyles.css
@@ -200,9 +200,10 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  width: 100%;
+  min-width: 100%;
   background-color: var(--background-color);
   padding-top: 5em;
+  padding-bottom: 5.5em;
 }
 
 .msgCard {
